Adjust Gatsby Merge Build Signed-off-by: zhouzibo <ziboilihua@gmail.com>

--- a/.github/workflows/merge-build.yml
+++ b/.github/workflows/merge-build.yml
@@ -15,3 +15,16 @@ jobs:
           access-token: ${{ secrets.ACCESS_TOKEN }}
           deploy-branch: gh-pages
           gatsby-args: --prefix-paths
+      - name: Upload to Crust and IPFS
+        id: upload
+        uses: crustio/ipfs-upload-action@v1.0.2
+        with:
+          path: './public'
+          crust-secret-key: ${{ secrets.CRUST_SECRET_KEY }}
+      - name: Pin to Crust
+        uses: crustio/ipfs-crust-action@v1.0.8
+        continue-on-error: true
+        timeout-minutes: 2
+        with:
+          cid: ${{ steps.upload.outputs.hash }}
+          seeds: ${{ secrets.CRUST_SEEDS }}
