Added schema validation step

--- a/.github/workflows/upload-ipfs.yml
+++ b/.github/workflows/upload-ipfs.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Parse Markdown
         run: npm run parse-markdown
 
+      - name: Verify Schema
+        run: npm run validation:aip-schema
+
       - name: Upload to Pinata and theGraph IPFS
         env:
           PINATA_KEY: ${{ secrets.PINATA_KEY }}
