--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   ],
   "dependencies": {
     "@react-hook/window-size": "^3.0.6",
+    "ajv": "^8.6.2",
     "bs58": "^4.0.1",
     "classnames": "^2.2.6",
     "fs": "0.0.1-security",
@@ -65,6 +66,7 @@
     "develop": "gatsby develop",
     "parse-markdown": "m2j ./content/aips/*.md -c -o ./content/ipfs-aips/all-aips.json",
     "upload:pinata-thegraph": "node aip-uploader.js && rm tmp",
+    "validation:aip-schema": "node aip-schema-validation.js",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve --prefix-paths",
