--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "typeface-open-sans": "0.0.75",
     "typeface-roboto": "0.0.75",
     "typography": "^0.16.19",
-    "typography-theme-github": "^0.16.19"
+    "typography-theme-github": "^0.16.19",
+    "ajv": "^8.6.2"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
@@ -65,6 +66,7 @@
     "develop": "gatsby develop",
     "parse-markdown": "m2j ./content/aips/*.md -c -o ./content/ipfs-aips/all-aips.json",
     "upload:pinata-thegraph": "node aip-uploader.js && rm tmp",
+    "validation:aip-schema": "node aip-schema-validation.js",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve --prefix-paths",
