fix: added validation step on the workflow

--- a/.github/workflows/schema-validation.yml
+++ b/.github/workflows/schema-validation.yml
@@ -23,3 +23,6 @@ jobs:
 
       - name: Parse Markdown
         run: npm run parse-markdown
+
+      - name: Verify Schema
+        run: npm run validation:aip-schema
