--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "develop": "gatsby develop",
     "parse-markdown": "m2j ./content/aips/*.md -c -o ./content/ipfs-aips/all-aips.json",
     "upload:pinata-thegraph": "node aip-uploader.js && rm tmp",
-    "validation:aip-schema": "node aip-schema-validation.js",
+    "validation:aip-schema": "node ./aip-schema-validation.js",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve --prefix-paths",
