--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   },
   "dependencies": {
     "@react-hook/window-size": "^3.0.6",
+    "ajv": "^8.6.2",
     "bs58": "^4.0.1",
     "classnames": "^2.2.6",
+    "ethers": "^5.4.6",
     "fs": "0.0.1-security",
     "gatsby": "^2.20.25",
     "gatsby-cli": "^2.12.48",
@@ -48,8 +50,7 @@
     "typeface-open-sans": "0.0.75",
     "typeface-roboto": "0.0.75",
     "typography": "^0.16.19",
-    "typography-theme-github": "^0.16.19",
-    "ajv": "^8.6.2"
+    "typography-theme-github": "^0.16.19"
   },
   "devDependencies": {
     "gh-pages": "^2.2.0",
