--- a/.github/workflows/upload-ipfs.yml
+++ b/.github/workflows/upload-ipfs.yml
@@ -6,24 +6,24 @@ on:
       - master
 
 jobs:
-  upload-to-ipfs: 
+  upload-to-ipfs:
     name: aip-uploader
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Rename aip to upper case
         run: cd content/aips && bash toUpper.sh || true && cd ../..
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12.x
+          node-version: 16
+          cache: "npm"
 
       - name: Install dependencies
-        run: npm install
-      
+        run: npm ci
+
       - name: Parse Markdown
         run: npm run parse-markdown
 
@@ -38,5 +38,40 @@ jobs:
         with:
           author_name: miguelmtzinf
           author_email: miguelmtzinf@users.noreply.github.com
-          message: '[PIPELINE] Committed IPFS documents uploads'
-          add: '.'
+          message: "[PIPELINE] Committed IPFS documents uploads"
+          add: "."
+
+  update-readme:
+    needs:
+      - upload-to-ipfs
+
+    name: Update readme
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Update readme
+        run: yarn ci:readme
+
+      - name: check diff
+        run: |
+          if [[ -z $(git status -s) ]]
+          then
+            echo "tree is clean"
+          else
+            git config --global user.name 'Cache bot'
+            git config --global user.email 'cache-bot@aave.com'
+            git add README.md
+            git commit -am "fix(cache): update readme :robot:"
+            git push origin master
+          exit
+          fi
