--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "ethers": "^5.4.6",
     "fs": "0.0.1-security",
     "markdown-to-json": "^0.5.4",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "prettier": "2.0.4"
   },
   "homepage": "https://github.com/aave/aip",
   "keywords": [
-    "aave", "aip"
+    "aave",
+    "aip"
   ],
   "main": "n/a",
   "repository": {
@@ -34,6 +36,7 @@
     "upload:pinata-thegraph": "node aip-uploader.js && rm tmp",
     "validation:aip-schema": "node ./aip-schema-validation.js",
     "generate-filename": "node aip-filename-generator.js",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\""
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "ci:generate-readme": "ts-node scripts/generate-readme.ts"
   }
 }
