--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.13",
     "prettier": "2.7.1"
   },
   "homepage": "https://github.com/aave/aip",
