--- a/.github/workflows/upload-ipfs.yml
+++ b/.github/workflows/upload-ipfs.yml
@@ -46,6 +46,6 @@ jobs:
             git config --global user.email 'cache-bot@users.noreply.github.com'
             git add .
             git commit -m "chore(cache): update ipfs aips :robot:"
-            git push origin master
+            git push origin ${{ github.event.repository.default_branch }}
           exit
           fi
