refactor: use main as default branch
refactor: use main as default branch and run schema validation on each pr

--- a/.github/workflows/schema-validation.yml
+++ b/.github/workflows/schema-validation.yml
@@ -2,11 +2,9 @@ name: Schema Validation
 
 on:
   pull_request:
-    branches:
-      - Pending-AIPs
 
 jobs:
-  validate-shcema:
+  validate-schema:
     name: schema-validator
     runs-on: ubuntu-latest
     steps:
