fix: try if that works

--- a/.github/workflows/schema-validation.yml
+++ b/.github/workflows/schema-validation.yml
@@ -31,7 +31,7 @@ jobs:
           cd content/aips
           for i in *.md 
           do 
-            mv "$i" "$(echo ${i%.md} | tr [:lower:] [:upper:]).md" 2>/dev/null; true
+            mv "$i" "$(echo ${i%.md} | tr [:lower:] [:upper:]).md" || true
           done
           # ensure nothing changed
           cd ../../
