--- a/package.json
+++ b/package.json
@@ -9,12 +9,19 @@
     "David Truong <david@aave.com>"
   ],
   "dependencies": {
+    "@ipld/dag-pb": "^3.0.0",
+    "@types/bs58": "^4.0.1",
+    "@types/node-fetch": "^2.6.2",
     "ajv": "^8.11.0",
-    "bs58": "^4.0.1",
+    "bs58": "^5.0.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.0",
+    "ipfs-only-hash": "^4.0.0",
+    "ipfs-unixfs": "^8.0.0",
+    "ipfs-unixfs-importer": "^7.0.1",
+    "ipld-dag-pb": "^0.22.3",
     "markdown-to-json": "^0.5.4",
-    "node-fetch": "^3.2.10",
+    "node-fetch": "^2.6.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -34,7 +41,7 @@
   },
   "scripts": {
     "parse-markdown": "m2j ./content/aips/*.md -c -o ./content/ipfs-aips/all-aips.json",
-    "upload:pinata-thegraph": "node scripts/aip-uploader.js && rm tmp",
+    "upload:pinata-thegraph": "ts-node scripts/aip-uploader.ts && rm tmp",
     "validation:aip-schema": "ts-node scripts/aip-schema-validation.ts",
     "ci:generate-readme": "ts-node scripts/generate-readme.ts"
   }
