fix(ci): create commit **before** creating pr (#210)
* fix: create commit **before** creating pr

* fix: flip flags as it's nicer

--- a/.github/workflows/upload-ipfs.yml
+++ b/.github/workflows/upload-ipfs.yml
@@ -54,19 +54,17 @@ jobs:
         run: |
           if [[ -z $(git status -s) ]]
           then
-            exit 0
-          else
             exit 1
+          else
+            git checkout -b ipfs-hash/${{ github.sha }}
+            git add .
+            git commit -am "fix(cache): add missing ipfs hashes"
+            git push origin ipfs-hash/${{ github.sha }}
+            exit 0
           fi
 
-      - name: create branch
-        if: steps.checkChanges.outcome == 'failure'
-        run: |
-          git checkout -b ipfs-hash/${{ github.sha }}
-          git push origin ipfs-hash/${{ github.sha }}
-
       - uses: actions/github-script@v6
-        if: steps.checkChanges.outcome == 'failure'
+        if: steps.checkChanges.outcome == 'success'
         with:
           script: |
             github.rest.pulls.create({
